# dune-fem-dg

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Makefile.am  README.md  config.h.cmake  configure.ac  dune.module  pyproject.toml
dune/fem-dg/: CMakeLists.txt  Makefile.am
dune/fem-dg/algorithm/: CMakeLists.txt  Makefile.am  additionaloutputhandler.hh  advectiondiffusionstepper.hh  advectionstepper.hh  base.hh  checkpointhandler.hh  checkpointinitializer.hh  combinedevolution.hh  combinedsteadystate.hh  containers.hh  coupling.hh  createsubalgorithms.hh  datawriterhandler.hh  diagnosticshandler.hh  ellipticalgorithm.hh  evolution.hh  gridinitializer.hh  interface.hh  monitor.hh  steadystate.hh  subevolution.hh  substeadystate.hh
dune/fem-dg/algorithm/caller/: CMakeLists.txt  adapt.hh  checkpoint.hh  datawriter.hh  diagnostics.hh  eocwriter.hh  postprocessing.hh  solvermonitor.hh
dune/fem-dg/algorithm/handler/: adapt.hh  additionaloutput.hh  checkpoint.hh  datawriter.hh  diagnostics.hh  interface.hh  postprocessing.hh  solutionlimiter.hh  solvermonitor.hh
dune/fem-dg/algorithm/sub/: CMakeLists.txt  advection.hh  advectiondiffusion.hh  container.hh  containers.hh  elliptic.hh  evolution.hh  interface.hh  steadystate.hh
dune/fem-dg/assemble/: CMakeLists.txt  Makefile.am  assemblertraits.hh  primalmatrix.hh
dune/fem-dg/examples/: Makefile.am
dune/fem-dg/examples/advdiff/: CMakeLists.txt  algorithmcreator.hh  main.cc  models.hh
dune/fem-dg/examples/dataio/: CMakeLists.txt  Makefile.am  algorithmcreator.hh  checkedcheckpointcaller.hh  checkpointing.hh  dataconvert.cc  main.cc  models.hh  problem.hh  problemcreator.hh
dune/fem-dg/examples/euler/: CMakeLists.txt  algorithmcreator.hh  euler.hh  generatedmodel_sod_2d.hh  main.cc  models.hh  modelwrapper.hh  problems.hh
dune/fem-dg/examples/grids/: grid2d_nonaffine.dgf  grid2d_str1d.dgf  nswaves_3d.dgf
dune/fem-dg/examples/incompnavierstokes/: CMakeLists.txt  algorithmcreator.hh  incompnavierstokesalgorithm.hh  main.cc  models.hh  problemcreator.hh  stokesmodel.hh  subnavierstokesalgorithmcreator.hh  subpoissonalgorithmcreator.hh  substokesalgorithmcreator.hh
dune/fem-dg/examples/navierstokes/: CMakeLists.txt  algorithmcreator.hh  main.cc  models.hh
dune/fem-dg/examples/netcdf/: main.cc
dune/fem-dg/examples/parameter/: paramBase  paramSolver
dune/fem-dg/examples/poisson/: CMakeLists.txt  algorithmcreator.hh  gridinitializer.hh  main.cc  models.hh
dune/fem-dg/examples/stokes/: CMakeLists.txt  algorithmcreator.hh  main.cc  models.hh  problemcreator.hh  stokesalgorithm.hh  stokesassembler.hh
dune/fem-dg/main/: CMakeLists.txt  Makefile.am  caching.hh  caching2.hh  codegen.hh  codegen2.hh  default.hh  main.cc  main.hh  main_0.cc  main_1.cc  main_2.cc  main_3.cc  main_4.cc  main_pol.cc  vectorialbasefunctionset.hh
dune/fem-dg/misc/: CMakeLists.txt  Makefile.am  algorithmcreatorenums.hh  algorithmcreatorselector.hh  codegen.hh  combinedfunctionspace.hh  configurator.hh  cons2prim.hh  covarianttuple.hh  crs.hh  default.hh  dgnorm.hh  diagnostics.hh  integral_constant.hh  interpolatethreaded.hh  matrixutils.hh  optional.hh  parameterkey.hh  problemcreatorselector.hh  runfile.hh  simulator.hh  static_warning.hh  streams.hh  tupleconcat.hh  tupleutility.hh  typedefcheck.hh  uniquefunctionname.hh
dune/fem-dg/misc/error/: CMakeLists.txt  dgeocerror.hh  eocerrorlist.hh  h1eocerror.hh  l1eocerror.hh  l2eocerror.hh
dune/fem-dg/models/: CMakeLists.txt  Makefile.am  additional.hh  defaultmodel.hh  defaultprobleminterfaces.hh  modelwrapper.hh  stokesprobleminterfaces.hh
dune/fem-dg/operator/: CMakeLists.txt  Makefile.am  interpolatethreaded.hh
dune/fem-dg/operator/adaptation/: CMakeLists.txt  Makefile.am  adaptation.cc  adaptation.hh  estimator.hh  estimatorbase.hh  poissonestimator.hh  stokesestimator.hh  utility.hh
dune/fem-dg/operator/dg/: CMakeLists.txt  Makefile.am  defaultmodel.hh  defaultquadrature.hh  dgmasspass.hh  dgoperatorchoice.hh  dgpyoperator.hh  discretemodelcommon.hh  fluxdiscretemodel.hh  fluxoperator.hh  operatorbase.hh  operatortraits.hh  passtraits.hh  primaldiscretemodel.hh  primaloperator.hh
dune/fem-dg/operator/fluxes/: CMakeLists.txt  Makefile.am  advectionflux.hh  analyticaleulerflux.hh  analyticalfluxes.hh  averageflux.hh  dgprimalfluxes.hh  diffusionflux.hh  eulerfluxes.hh  ldgflux.hh  llfadvflux.hh  mhd_eqns.cc  mhd_eqns.hh  mhd_fluxes.cc  mhd_fluxes.hh  mhdfluxes.hh  noflux.hh  rotator.hh  staticparameter.hh  upwindflux.hh
dune/fem-dg/operator/fv/: fvoperator.hh
dune/fem-dg/operator/limiter/: CMakeLists.txt  Makefile.am  cartesiantvd.hh  indicatorbase.hh  limiter.hh  limiterdiscretemodel.hh  limitermodel.hh  limiterutility.hh  limitpass.hh  lpreconstruction.hh  reconstruction.hh  scalinglimitpass.hh  smoothness.hh
dune/fem-dg/pass/: CMakeLists.txt  Makefile.am  assembleddiffusionpass.hh  assemblediffusionpass.hh  context.hh  dginversemass.hh  dgmasspass.hh  dgmodelcaller.hh  dgpass.hh  domaindecomposed.hh  ellipticmodelcaller.hh  insertoperator.hh  partitioner.hh  pass.hh  threadfilter.hh  threadhandle.hh  threadpass.hh
dune/fem-dg/python/: operator.hh
dune/fem-dg/solver/: CMakeLists.txt  Makefile.am  basicrow.hh  dg.hh  dghelmholtzinverse.hh  linearsolvers.hh  newtoninverseoperator.hh  odesolver.hh  rungekuttasolver.hh  smartodesolver.hh  strangcarryover.hh  uzawa.hh
dune/fem-dg/stepper/: CMakeLists.txt  Makefile.am  advectiondiffusionstepper.hh  advectionstepper.hh  base.hh  baseevolution.hh  ellipt.hh  ellipticalgorithm.hh  ffscorner.hh  fluxprojection.hh  hermite.hh  polynomial.hh  stepper.hh  stepperbase.hh  steppertraits.hh
dune/fem-dg/test/: .gitignore  CMakeLists.txt  Makefile.am  checkpointing.cc  checkpointing.hh  dataconvert.cc  problem.hh  problemcreator.hh
dune/fem-dg/test/advdiff/: CMakeLists.txt  Makefile.am  deformationalflow.hh  main.cc  models.hh  parameter  parameter.in  parameter_cmake  problem.hh  problemQuasiHeatEqn.hh  problemcreator.hh  problems.hh  steppertraits.hh
dune/fem-dg/test/combined/: CMakeLists.txt  combinedstepper.hh  (+4 more)
(+347 files in other folders)
